# SweetHTTP

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  SweetHTTP.sln  SweetHTTP.vcxproj  SweetHTTP.vcxproj.filters  SweetSocket
plugins/SweetHTTP_plugin_cpp/: SweetHTTP_plugin_cpp.cpp  SweetHTTP_plugin_cpp.filters  SweetHTTP_plugin_cpp.vcxproj
plugins/SweetHTTP_plugin_java/: SweetHTTP_plugin_java.c  SweetHTTP_plugin_java.vcxproj  SweetHTTP_plugin_java.vcxproj.filters
src/: SweetHTTP.c  SweetHTTP.h  SweetHTTP_array.c  SweetHTTP_array.h  SweetHTTP_config.c  SweetHTTP_config.h  SweetHTTP_console.c  SweetHTTP_console.h  SweetHTTP_file.c  SweetHTTP_file.h  SweetHTTP_plugin.c  SweetHTTP_plugin.h  SweetHTTP_process.c  SweetHTTP_process.h  SweetHTTP_utils.c  SweetHTTP_utils.h  SweetHTTP_version.h
utils/: genVersion.ps1  genVersion.sh  http.conf.example  packingWindows.ps1
